--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.36.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
