--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+**/*outputs/
+
+.pytest_cache
+__pycache__
+**/*.egg-info
+
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
