--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tic-tac-toe-rl"
+name = "tic-tac-toe"
 version = "0.1.0"
 authors = [{ name = "James Gadoury", email = "gadouryjames@gmail.com" }]
 dependencies = ["numpy>=2.3.1,<3.0"]
